--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body {
 
 img#landing {
   height: 40rem;
-  width: 78.9rem; 
+  width: 100rem; 
 }
 
 .card {
@@ -39,7 +39,7 @@ img#landing {
 }
 
 #skills > li > img {
-  width: 60px;
+  width: 100px;
   height: 60px;
   font-weight: bold;
   position: relative;
@@ -49,10 +49,17 @@ img#landing {
 
 #projects {
   background-color: rgb(222, 226, 230);
+
+
 }
 
 form {
   background-color: rgb(222, 226, 230);
+}
+
+#footer {
+    background-color: rgb(233, 236, 239);
+
 }
 
 
