--- a/index.css
+++ b/index.css
@@ -14,8 +14,12 @@ body {
 }
 
 img#landing {
-  height: 40rem;
-  width: 100rem; 
+ 
+
+}
+#home {
+  background-color: rgb(52, 58, 64);
+  align-content: center;
 }
 
 .card {
@@ -49,9 +53,8 @@ img#landing {
 
 #projects {
   background-color: rgb(222, 226, 230);
-
-
 }
+
 
 form {
   background-color: rgb(222, 226, 230);
